[tool.poetry]
name = "diffuse-neutrino-flux"
version = "0.1.0"
description = "Lightweight package to plot diffuse neutrino flux measurements"
authors = ["Jannis Necker <jannis.necker@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "diffuse_neutrino_flux"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.20.0"
matplotlib = ">=3.3.0"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
